treewide: Recognize main page with id
Change-Id: I141ade328e94a5cf729a00ad6130da8e3eb37a56

--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -75,7 +75,7 @@ a:active {
 	transform: translateY(5%);
 }
 
-.main-page {
+#main-page {
 	margin: 20px;
 	height: calc(100% - (40px + 47px));
 	width: calc(100% - 40px);
