--- a/assets/css/downloads.css
+++ b/assets/css/downloads.css
@@ -2,7 +2,7 @@
 	float: left;
 }
 
-.devices-list {
+#devices-list {
 	background-color: #1d1d1d;
 	border: 3px solid #1d1d1d;
 	box-sizing: border-box;
@@ -15,42 +15,42 @@
 	height: 100%;
 }
 
-.device-tab {
+#device-tab {
 	margin-left: 40px;
 	width: calc(75% - 20px);
 	height: 50%;
 }
 
-.devices-list div {
+#devices-list div {
 	cursor: pointer;
 }
 
-.devices-list div p {
+#devices-list div p {
 	padding: 0px 16px;
 }
 
-.devices-list .device-not-active:hover {
+#devices-list .device-not-active:hover {
 	background-color: #111;
 }
 
-.devices-list .device-active {
+#devices-list .device-active {
 	background-color: #333;
 }
 
-.device-info-tab {
+#device-info-tab {
 	float: left;
 	width: 75%;
 	height: 100%;
 }
 
-.device-image-tab {
+#device-image-tab {
 	float: right;
 	width: 25%;
 	height: 100%;
 	margin: 0;
 }
   
-.device-image-tab > img {
+#device-image-tab > img {
 	max-width: 100%;
 	max-height: 100%;
 }
@@ -61,23 +61,23 @@
 	 * of the screen, and the infos on the bottom
 	*/
 
-	.devices-list {
+	#devices-list {
 		width: 100%;
 		height: 50%
 	}
 
-	.device-tab {
+	#device-tab {
 		width: 100%;
 		margin-left: 0px;
 	}
 
-	.device-info-tab {
+	#device-info-tab {
 		float: none;
 		width: 100%;
 		height: auto;
 	}
 
-	.device-image-tab {
+	#device-image-tab {
 		margin-top: 20px;
 		margin-left: 0px;
 		float: none;
