treewide: CSS refactor
Change-Id: Id02319ae43a2fd3b48428a42d561fad2f039e540

--- a/assets/css/downloads.css
+++ b/assets/css/downloads.css
@@ -1,8 +1,10 @@
+@import url("common.css");
+
 #main-page {
 	display: flex;
 }
 
-#main-page > div {
+#main-page>div {
 	box-sizing: border-box;
 	display: inline-block;
 	overflow: auto;
@@ -38,7 +40,7 @@
 	background-color: #333333;
 }
 
-#device-tab > div {
+#device-tab>div {
 	height: 100%;
 }
 
@@ -53,7 +55,7 @@
 	margin: 0;
 }
 
-#device-image-tab > img {
+#device-image-tab>img {
 	max-width: 100%;
 	max-height: 100%;
 }
@@ -68,7 +70,7 @@
 		display: block;
 	}
 
-	#main-page > div {
+	#main-page>div {
 		flex: none;
 		width: 100%;
 	}
@@ -81,7 +83,7 @@
 		height: auto;
 	}
 
-	#device-tab > div {
+	#device-tab>div {
 		float: none;
 		height: auto;
 		width: 100%;
