--- a/assets/css/common.css
+++ b/assets/css/common.css
@@ -1,4 +1,7 @@
-html, body {
+@import url("../fonts/fonts.css");
+
+html,
+body {
 	box-sizing: border-box;
 	height: 100%;
 	margin: 0;
@@ -18,7 +21,8 @@ a {
 	text-decoration: none;
 }
 
-a:link, a:visited {
+a:link,
+a:visited {
 	color: rgb(54, 182, 224);
 }
 
