common: Make sure <a> get link colors only when it's actually clickable
Change-Id: If2c41713a05167d3b8bc46f8745434e6216e5270

--- a/assets/css/common.css
+++ b/assets/css/common.css
@@ -26,11 +26,13 @@ a:visited {
 	color: rgb(54, 182, 224);
 }
 
-a:hover {
+a:link:hover,
+a:visited:hover {
 	color: rgb(12, 82, 105);
 }
 
-a:active {
+a:link:active,
+a:visited:active {
 	color: rgb(7, 53, 68);
 }
 
