treewide: License headers
Change-Id: Ifb66c4978001d3243758e8231512fcd46c7fbc0c

--- a/assets/css/index.css
+++ b/assets/css/index.css
@@ -1,1 +1,6 @@
+/**
+ * SPDX-FileCopyrightText: 2024 Sebastiano Barezzi <seba@sebaubuntu.dev>
+ * SPDX-License-Identifier: MIT
+ */
+
 @import url("common.css");
