--- a/assets/css/common.css
+++ b/assets/css/common.css
@@ -1,3 +1,8 @@
+/**
+ * SPDX-FileCopyrightText: 2024 Sebastiano Barezzi <seba@sebaubuntu.dev>
+ * SPDX-License-Identifier: MIT
+ */
+
 @import url("../fonts/fonts.css");
 
 html,
