--- a/assets/fonts/fonts.css
+++ b/assets/fonts/fonts.css
@@ -1,3 +1,8 @@
+/**
+ * SPDX-FileCopyrightText: 2024 Sebastiano Barezzi <seba@sebaubuntu.dev>
+ * SPDX-License-Identifier: MIT
+ */
+
 @font-face {
 	font-family: 'Product Sans';
 	src: url('ProductSans-Regular.woff') format('woff'),
