--- a/assets/css/common.css
+++ b/assets/css/common.css
@@ -5,6 +5,9 @@
 
 @import url("../fonts/fonts.css");
 
+/* Material Icons */
+@import url("https://fonts.googleapis.com/icon?family=Material+Icons");
+
 html,
 body {
 	box-sizing: border-box;
